@@ -3,7 +3,7 @@ Section: net
 Priority: optional
 Maintainer: LI Daobing <lidaobing@debian.org>
 Uploaders: Zhengpeng Hou <zhengpeng-hou@ubuntu.com>
-Build-Depends: debhelper (>= 5), dpatch, autotools-dev, libgtk2.0-dev,
+Build-Depends: debhelper (>= 7.0.50~), autotools-dev, libgtk2.0-dev,
  libgconf2-dev, libgstreamer0.10-dev
 Standards-Version: 3.8.3
 Homepage: http://code.google.com/p/iptux/
